--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,9 +1,11 @@
 version: v1
 plugins:
-  - remote: buf.build/library/plugins/go:v1.27.1-1
+  # - remote: buf.build/library/plugins/go:v1.27.1-1
+  - name: go
     out: gen/go
     opt: paths=source_relative
-  - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
+  # - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
+  - name: go-grpc
     out: gen/go
     opt: paths=source_relative
   - name: validate
