--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,13 +1,21 @@
 version: v1
 plugins:
-  # - remote: buf.build/library/plugins/go:v1.27.1-1
-  - name: go
+  - remote: buf.build/library/plugins/go:v1.27.1-1
+    # - name: go
     out: gen/go
     opt: paths=source_relative
-  # - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
-  - name: go-grpc
+  - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
+    # - name: go-grpc
     out: gen/go
     opt: paths=source_relative
+  - remote: buf.build/grpc-ecosystem/plugins/grpc-gateway:v2.7.2-1
+    # - name: grpc-gateway
+    out: gen/go
+    opt: paths=source_relative,allow_repeated_fields_in_body=true,generate_unbound_methods=true
+  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.2-1
+    # - name: openapiv2
+    out: gen/go
+    opt: allow_repeated_fields_in_body=true,generate_unbound_methods=true,allow_merge=true,proto3_optional_nullable=true
   - name: validate
     opt: lang=go,paths=source_relative
     out: gen/go
